Allow admin to restart site

--- a/Rodgort/ClientApp/src/app/home/home.component.html
+++ b/Rodgort/ClientApp/src/app/home/home.component.html
@@ -60,6 +60,7 @@
             <li><a href="/manual-question-processing">Manual Question Processing</a></li>
             <li><a href="/unknown-deletion-resolution">Unknown deletion resolution
                     ({{statistics.admin.unknownDeletions}})</a></li>
+            <li><a href="javascript:void(0)" (click)="shutdown()">Shutdown</a></li>
         </ul>
     </ng-container>
 </div>
