Make all the tables responsive

--- a/Rodgort/ClientApp/src/app/requests/requests.component.html
+++ b/Rodgort/ClientApp/src/app/requests/requests.component.html
@@ -104,7 +104,7 @@
             </div>
             <p *ngFor="let metaTag of question.metaStatusTags" class="post-statustag"><a href="https://meta.stackoverflow.com/questions/tagged/{{metaTag.tagName}}">{{metaTag.tagName}}</a></p>
             <p *ngFor="let metaTag of question.metaRequestTags" class="post-metatag"><a href="https://meta.stackoverflow.com/questions/tagged/{{metaTag.tagName}}">{{metaTag.tagName}}</a></p>
-            <div class="tags">
+            <div class="tags table-responsive">
                 <table class="table">
                     <thead>
                         <tr>
