--- a/Rodgort/ClientApp/src/app/progress/progress.component.html
+++ b/Rodgort/ClientApp/src/app/progress/progress.component.html
@@ -38,22 +38,26 @@
           <input type="checkbox" id="{{tag.tag}}-userGrandTotalShowAll" [(ngModel)]="tag.userGrandTotalShowAll"
             [ngModelOptions]="{standalone: true}">
           <label for="{{tag.tag}}-userGrandTotalShowAll">Show all</label>
-          <table class="table">
-            <thead>
-              <tr>
-                <th style="width:85%">User</th>
-                <th style="width:15%">Count</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let row of tag.userGrandTotals | sortAscending: 'total'; let i=index">
-                <ng-container *ngIf="tag.userGrandTotalShowAll || i < 10">
-                  <td><app-render-username [user]="row" [warnEditPrivileges]="isModerator"></app-render-username></td>
-                  <td>{{row.total}}</td>
-                </ng-container>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th style="width:85%">User</th>
+                  <th style="width:15%">Count</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let row of tag.userGrandTotals | sortAscending: 'total'; let i=index">
+                  <ng-container *ngIf="tag.userGrandTotalShowAll || i < 10">
+                    <td>
+                      <app-render-username [user]="row" [warnEditPrivileges]="isModerator"></app-render-username>
+                    </td>
+                    <td>{{row.total}}</td>
+                  </ng-container>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </ng-container>
 
         <ng-container *ngIf="tag.userTotals && tag.userTotals.length">
@@ -61,24 +65,28 @@
           <input type="checkbox" id="{{tag.tag}}-userBreakdownShowAll" [(ngModel)]="tag.userBreakdownShowAll"
             [ngModelOptions]="{standalone: true}">
           <label for="{{tag.tag}}-userBreakdownShowAll">Show all</label>
-          <table class="table">
-            <thead>
-              <tr>
-                <th style="width: 70%">User</th>
-                <th style="width: 15%">Type</th>
-                <th style="width: 15%">Count</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let row of tag.userTotals | sortAscending: 'total'; let i=index">
-                <ng-container *ngIf="tag.userBreakdownShowAll || i < 10">
-                  <td><app-render-username [user]="row" [warnEditPrivileges]="isModerator"></app-render-username></td>
-                  <td>{{row.type}}</td>
-                  <td>{{row.total}}</td>
-                </ng-container>
-              </tr>
-            </tbody>
-          </table>
+          <div class="table-responsive">
+            <table class="table">
+              <thead>
+                <tr>
+                  <th style="width: 70%">User</th>
+                  <th style="width: 15%">Type</th>
+                  <th style="width: 15%">Count</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let row of tag.userTotals | sortAscending: 'total'; let i=index">
+                  <ng-container *ngIf="tag.userBreakdownShowAll || i < 10">
+                    <td>
+                      <app-render-username [user]="row" [warnEditPrivileges]="isModerator"></app-render-username>
+                    </td>
+                    <td>{{row.type}}</td>
+                    <td>{{row.total}}</td>
+                  </ng-container>
+                </tr>
+              </tbody>
+            </table>
+          </div>
         </ng-container>
       </ng-container>
     </ng-container>
