Fixes #31 - Update 'GitLab' link in footer

--- a/Rodgort/ClientApp/src/app/app.component.html
+++ b/Rodgort/ClientApp/src/app/app.component.html
@@ -40,7 +40,7 @@
         <span class="text-muted">
             Made by the
             <a href="https://sobotics.org/">SOBotics</a> team. Source code on
-            <a href="https://gitlab.com/rjrudman/StackExchangeChat">GitLab</a>. Content provided by
+            <a href="https://gitlab.com/rjrudman/Rodgort">GitLab</a>. Content provided by
             <a href="https://api.stackexchange.com/">Stack Exchange API</a>
             under the
             <a href="https://creativecommons.org/licenses/by-sa/3.0/"> CC BY-SA 3.0 license.</a>
