--- a/Rodgort/ClientApp/src/app/user/user.component.html
+++ b/Rodgort/ClientApp/src/app/user/user.component.html
@@ -1,9 +1,8 @@
 <div *ngIf="userData" class="container">
 
-  <p class="h1">
-    <app-render-username [user]="userData" [hyperlinkName]="false"></app-render-username>
-  </p>
-  <p class="lead"><a href="https://stackoverflow.com/users/{{userData.userId}}">View on site</a></p>
+  <a href="https://stackoverflow.com/users/{{userData.userId}}/{{userData.userName}}">
+    <img src="https://stackoverflow.com/users/flair/{{userData.userId}}.png" width="208" height="58" alt="profile for {{userData.userName}} at Stack Overflow, Q&amp;A for professional and enthusiast programmers" title="profile for {{userData.userName}} at Stack Overflow, Q&amp;A for professional and enthusiast programmers">
+  </a>
 
   <hr />
 
