Mark burns as on-going, and also track current duration

--- a/Rodgort/ClientApp/src/app/tracked-burns/tracked-burns.component.html
+++ b/Rodgort/ClientApp/src/app/tracked-burns/tracked-burns.component.html
@@ -28,7 +28,7 @@
             {{burn.burnStartedLocal}}
           </td>
           <td title={{burn.burnEnded}}>
-            {{burn.burnEndedLocal}}
+            {{burn.burnEndedLocal || 'In Progress'}}
           </td>
           <td>
             {{burn.duration}}
