Don't add "In progress", it's distracting

--- a/Rodgort/ClientApp/src/app/tracked-burns/tracked-burns.component.html
+++ b/Rodgort/ClientApp/src/app/tracked-burns/tracked-burns.component.html
@@ -30,7 +30,7 @@
             {{burn.burnStartedLocal}}
           </td>
           <td title={{burn.burnEnded}}>
-            {{burn.burnEndedLocal || 'In Progress'}}
+            {{burn.burnEndedLocal}}
           </td>
           <td>
             {{burn.duration}}
