--- a/Rodgort/ClientApp/src/app/tracked-burns/tracked-burns.component.html
+++ b/Rodgort/ClientApp/src/app/tracked-burns/tracked-burns.component.html
@@ -36,7 +36,7 @@
             {{burn.duration}}
           </td>
           <td>
-            {{burn.numActions}}
+            {{burn.numActions | number}}
           </td>
           <td>
             {{burn.actionsPerDay | number}}
